# rustymatch

./: .gitignore  Cargo.toml  LICENSE  README.md  development-report.md
benchmarks/: Cargo.toml
benchmarks/benches/: comparison.rs
benchmarks/js-benchmark/: benchmark.js  improved-benchmark.js  package-lock.json  package.json  testdata.js
benchmarks/results/: js-benchmark-results-2025-08-09T04-39-19-277Z.json  js-benchmark-results-2025-08-09T06-29-14-775Z.json  performance-comparison-report-ja.md  performance-comparison-report.md
src/: lib.rs  main.rs
